src/App.css
.App {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 1024px;
  height: 768px;
  overflow: hidden;

  margin-left: -512px;
  margin-top: -384px;

  display: grid;
  grid-template-columns: 1fr;

  --steps: 6;
  --primary: lightblue;
}

.App--has-nav {
  grid-template-columns: calc(768px / var(--steps)) 1fr;
}

img {
  max-width: 100%;
}

.steps {
  display: grid;
  grid-template-rows: repeat(var(--steps), calc(100% / var(--steps)));
}

.steps__step {
  border: 1px solid #333;
  border-right-color: var(--primary);
  display: grid;
  place-items: center;
  text-decoration: none;
}

.steps__step > .material-icons {
  font-size: 4rem;
}

.steps__step--active {
  border-color: var(--primary);
  border-right: 0;
  background: var(--primary);
}

.steps__step--disabled {
  filter: grayscale(1);
  pointer-events: none;
}

.step {
  border: 1px solid var(--primary);
  padding: 1rem;
  position: relative;
}

.App--has-nav .step {
  border-left: 0;
}

.step--hello .step__content {
  padding: 0 10rem;
}

.buttons.languages {
  justify-content: space-between;
}

.language {
  background-size: contain;
  width: 5rem;
  height: 3rem;
}

.language.en {
  background-image: url("./en.png");
}
.language.de {
  background-image: url("./de.png");
}
.language.fr {
  background-image: url("./fr.png");
}

.step--upload {
  text-align: center;
}

.modes {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
}

.pile {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 80%;
}

.pile .photo {
  width: 90%;
  position: absolute;
  box-shadow: 0 0 10px 0 rgba(0, 0, 50, 0.3);
}

.pile .photo:nth-child(2) {
  top: 15px;
  left: 15px;
}

.pile .photo:nth-child(3) {
  top: 30px;
  left: 30px;
}

.tiles {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 1rem;
  margin: 20px 0;
}

.step--settings .selected-photo {
  width: 300px;
  height: 200px;
}

.settings-table th,
.settings-table td {
  text-align: left;
  padding: 0.5rem 1rem 0.5rem 0;
}

.step__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.photos {
  display: grid;

  grid-template-columns: repeat(var(--columns), 1fr);
  gap: 1rem;

  overflow-y: scroll;
  max-height: 600px;
}

.photos__photo {
  position: relative;
}

.photos__photo input {
  position: absolute;
  right: 8px;
  bottom: 8px;
  transform: scale(2);
}

.buttons {
  display: flex;
  justify-content: flex-start;
  gap: 1rem;
}

.buttons--group {
  gap: 0;
}

.buttons--small {
  font-size: 12px;
}

.buttons__caption {
  display: grid;
  place-items: center;
  margin-right: 0.5rem;
}

.button {
  padding: 1.5em 2em;
  background: lightgrey;
  border: 1px solid #333;
  text-decoration: none;
  color: inherit;
  cursor: pointer;
  border-radius: 8px;

  transition: 0.2s;
}

.button[disabled] {
  opacity: 0.5;
}

.buttons--small .button {
  padding: 0.5em 1em;
}

.button--active {
  background: var(--primary);
}

.button--back {
  position: absolute;
  bottom: 1rem;
  left: 1rem;
}

.button--continue {
  position: absolute;
  bottom: 1rem;
  right: 1rem;
}

.photo {
  height: 0;
  background-size: cover;
  padding-bottom: 66.666%;
}

.formats__format {
  display: inline-block;
  margin-right: 1rem;
}

.formats__format .button {
  display: block;
  margin-top: 0.5rem;
}

.spinner > * {
  margin-right: 1rem;
}

.spinner input {
  width: 4rem;
  padding: 1.5rem;
  line-height: 1;
  background: transparent;
  border: 1px solid #333;
  border-radius: 8px;
  text-align: center;
}

